base/htpc/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-external
  namespace: htpc
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.my-homelab.party`)
      priority: 0
      services:
        - kind: Service
          name: jellyfin
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-internal
  namespace: htpc
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
      services:
        - kind: Service
          name: prowlarr
          port: 9696
    - kind: Rule
      match: Host(`sonarr.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
      services:
        - kind: Service
          name: sonarr
          port: 8989
    - kind: Rule
      match: Host(`radarr.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
      services:
        - kind: Service
          name: radarr
          port: 7878
    - kind: Rule
      match: Host(`qbittorrent.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
      services:
        - kind: Service
          name: qbittorrent
          port: 8080
    - kind: Rule
      match: Host(`flaresolverr.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
      services:
        - kind: Service
          name: flaresolverr
          port: 8191
    - kind: Rule
      match: Host(`autobrr.my-homelab.party`)
      priority: 0
      middlewares:
        - name: local-only
          namespace: infra
      services:
        - kind: Service
          name: autobrr
          port: 7474
